--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <h2>pilotos</h2>
+<button type="button" class="btn btn-primary">Primary</button>
 <div class="card-container" style="display: flex; flex-wrap: wrap; gap: 16px;">
   <div class="card" style="width: 18rem;" *ngFor="let piloto of pilotos">
     <img [src]="piloto.headshot_url" class="card-img-top" alt="Imagen del piloto" style="width: 100%; height: 250px; object-fit: contain;">
